--- a/src/app/components/modal-imagen/modal-imagen.component.html
+++ b/src/app/components/modal-imagen/modal-imagen.component.html
@@ -23,7 +23,7 @@
                     <div class="modal-body">
                         <h3>Seleccione una imagen</h3>
                         <div class="text-center">
-                            <img *ngIf="!imgTemp" src="{{modalImageService.img | imagenUrl}}"  class="img-avatar" >
+                            <img *ngIf="!imgTemp" src="{{modalImageService.img | imagenUrl: modalImageService.tipo}}"  class="img-avatar" >
         
                             <img *ngIf="imgTemp" [src]="imgTemp" class="img-avatar" >
         
