--- a/src/app/pages/mantenimientos/medicos/medicos.component.html
+++ b/src/app/pages/mantenimientos/medicos/medicos.component.html
@@ -1,1 +1,86 @@
-<p>medicos works!</p>
+<div class="row animated fadeIn fast">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                
+                <input type="text"
+                       class="form-control"
+                       placeholder="Buscar médico..."
+                       (keyup)="buscar(txtTermino.value)"
+                       #txtTermino>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row animated fadeIn fast"
+     *ngIf="cargando">
+    <div class="col-12">
+        <div class="alert alert-info text-center">
+            <h4 class="alert-heading">Cargando</h4>
+            <i class="fa fa-spin fa-refresh fa-2x"></i>
+            <p class="mb-0">Por favor espere</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="row" *ngIf="!cargando" >
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body"><div class="row">
+                <div class="col">
+                    <h4 class="card-title">Médicos: {{medicos.length}}</h4>
+                    <h6 class="card-subtitle">Médicos registrados en mi aplicación</h6>
+                </div>
+
+                <div class="col text-right">                    
+                    <a class="btn btn-primary"
+                       routerLink="/dashboard/medico/nuevo">
+                        <i class="fa fa-hospital-o "> Crear médico </i>
+                    </a>
+                </div>
+            </div>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="w120 text-center">Foto</th>
+                                <th>Nombre</th>
+                                <th class="text-nowrap text-center">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let medico of medicos">
+
+                                <td class="text-center">
+                                    <img [src]="medico.img | imagenUrl:'medicos'"                                    
+                                    alt="Avatar de usuario"
+                                    class="img-avatar-list text-center cursor"                                          
+                                   (click)="abrirModal(medico)">
+                                </td>
+
+                                <td>{{medico.nombre}}</td>
+
+                                <td class="text-nowrap text-center">
+                                    <a [routerLink]="['/dashboard/medico', medico._id]" 
+                                       data-toggle="tooltip" 
+                                       data-original-title="Editar"> 
+                                       <i class="fa fa-pencil text-inverse m-r-10"></i> 
+                                    </a>
+
+                                    <a (click)="eliminarMedico(medico)" 
+                                       data-toggle="tooltip" 
+                                       data-original-title="Borrar"> 
+                                       <i class="fa fa-trash text-danger"></i> 
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
