--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -27,7 +27,7 @@
 
 
 <div class="row animated fadeIn fast"
-*ngIf="!cargando">
+      *ngIf="!cargando">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
@@ -48,7 +48,7 @@
                         <tbody>
                             <tr *ngFor="let usuario of usuarios">
                                 <td class="text-center">
-                                    <img src="{{usuario.img | imagenUrl}}" 
+                                    <img [src]="usuario.img | imagenUrl: 'usuarios'" 
                                          alt="Avatar de usuario"
                                          class="img-avatar-list text-center"
                                          (click)="abrirModal(usuario)"
